--- a/prediction/prediction_assignment.html
+++ b/prediction/prediction_assignment.html
@@ -382,97 +382,105 @@ library(caret)</code></pre>
 <pre class="r"><code>library(ggplot2)
 set.seed(666);
 
-data &lt;- read.csv(&quot;https://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv&quot;)
-testing_data &lt;- read.csv(&quot;https://d396qusza40orc.cloudfront.net/predmachlearn/pml-testing.csv&quot;)
-
-indexes = createDataPartition( data$classe, p = 0.6, list=FALSE)
-
-training &lt;- data[ indexes, ]
-validation &lt;- data[ -indexes, ]</code></pre>
+training &lt;- read.csv(&quot;https://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv&quot;)
+testing &lt;- read.csv(&quot;https://d396qusza40orc.cloudfront.net/predmachlearn/pml-testing.csv&quot;)</code></pre>
 <div id="exploratory-data-analysis" class="section level2">
 <h2>Exploratory data analysis</h2>
-<p>To have a first glance at the dataset I run a list of correlation of each variable of the dataset against the “classe” variable to predict.</p>
-<pre class="r"><code>source('exploratory_analysis.r')
-cor &lt;- tt_correlation_matrix( training, &quot;classe&quot;)
-head(cor)</code></pre>
-<pre><code>##             X pitch_forearm  magnet_arm_x magnet_belt_y  magnet_arm_y 
-##     0.9740214     0.3467320     0.2921493    -0.2910925    -0.2573053 
-##   accel_arm_x 
-##     0.2385974</code></pre>
-<p>This indicates that most variables aren’t very high correlated with the “classe” parameter. On the other hand, the variable X is very strongly correlated. We can also see how the relationship isn’t dependent on one specific user.</p>
-<p>It is worth nothing that the dataset contains plenty NA values.</p>
 <pre class="r"><code>full_rows &lt;- training[ complete.cases(training), ]</code></pre>
-<p>I tried restricting the dataset to only complete cases for a better analysis, but doing so results in a dataset of only 247 cases, too small to be used for the machine learning algorythm.</p>
+<p>I tried restricting the dataset to only complete cases for a better analysis, but doing so results in a dataset of only 406 cases.</p>
+<p>Therefore, I decided to deal with the missing values column wise. Various columns contain almost all NAs. As such, I selected the columns where the NAs make 90% or more of the values, and excluded them from the analysis.</p>
+<p>Additionally, with a first glance at the dataset we can notice that multiple columns hold informations about the user, the timestamp, or other details which are irrelavent to the prediction algorythm. All these useless columns will be excluded first.</p>
+<pre class="r"><code>#Irrelevant columns
+useless_cols &lt;- c(&quot;X&quot;, &quot;user_name&quot;, &quot;raw_timestamp_part_1&quot;, 
+    &quot;raw_timestamp_part_2&quot;,&quot;cvtd_timestamp&quot;,&quot;new_window&quot;, &quot;num_window&quot;) 
+#Missing values
+row_count &lt;- dim(training)[1]
+for (i in 8:160) {
+  #check amount of NAs in that columns
+  na_sum &lt;- sum(is.na(training[,i]))
+  if (na_sum/row_count &gt; 0.9 ) {
+    useless_cols &lt;- c(useless_cols, colnames(training)[i])
+  } 
+}
+
+
+#remove them
+training &lt;- training[ , !(names(training) %in% useless_cols)]
+testing &lt;- testing[ , !(names(testing) %in% useless_cols)]</code></pre>
+<p>This resulted in removing 74 columns, leaving use with a dataset with 85 potential predictor aside from the “classe” variable we are interested into.</p>
 </div>
-<div id="creating-the-machine-learning-algorythm" class="section level2">
-<h2>Creating the machine learning algorythm</h2>
-<p>Given the above considerations, I opted for a model. I have chosen a prediction with trees with a 10-fold cross-validation. I included in the model the predictors which had a correlation higher than 0.1 with the variable “classe”, thus dropping out most of the variables in the dataset and, in particular, those columns with plenty of missing data.</p>
-<pre class="r"><code>fitControl &lt;- trainControl(## 10-fold CV
-                           method = &quot;repeatedcv&quot;,
-                           number = 10,
-                           ## repeated ten times
-                           repeats = 10)
+<div id="pre-processing" class="section level2">
+<h2>Pre-processing</h2>
+<p>I decided to pre-process the data with Principal Component Analysis. By default, the PCA function in caret retains enough columns to explain 95% of the observed variance. However, I realised that on my old machine that resulted in an unmanageable computation load. As such, I decided to set the pre-processing to only pick the 10 most influential predictors. This will result in less accuracy, but will make the software computationally light enough to run on my machine.</p>
+<pre class="r"><code>#Save classe data for later
+y &lt;- training$classe 
 
-modelFit &lt;- train(classe ~ X + pitch_forearm + magnet_arm_x +magnet_belt_y + magnet_arm_y + accel_arm_x + accel_forearm_x +magnet_forearm_x + magnet_belt_z + pitch_arm + total_accel_forearm + magnet_arm_z + magnet_dumbbell_z + total_accel_arm + accel_dumbbell_x + magnet_forearm_y, data=training, method=&quot;rpart&quot;, trControl = fitControl)
+#Prepare data without classe variable
+classe_index &lt;- which( colnames(training)==&quot;classe&quot; )
+x_training &lt;- data.frame( data.matrix( training[ , -classe_index] ) )
+x_testing &lt;- data.frame( data.matrix( testing ) )
 
-modelFit</code></pre>
-<pre><code>## CART 
-## 
-## 11776 samples
-##    16 predictor
-##     5 classes: 'A', 'B', 'C', 'D', 'E' 
-## 
-## No pre-processing
-## Resampling: Cross-Validated (10 fold, repeated 10 times) 
-## Summary of sample sizes: 10597, 10599, 10599, 10598, 10598, 10598, ... 
-## Resampling results across tuning parameters:
-## 
-##   cp         Accuracy   Kappa    
-##   0.2437114  0.7589664  0.6937361
-##   0.2568818  0.5695070  0.4500159
-##   0.2704082  0.3442137  0.1025512
-## 
-## Accuracy was used to select the optimal model using the largest value.
-## The final value used for the model was cp = 0.2437114.</code></pre>
-<p>I applied the model to predict the data set apart for validation. The accuracy on our model was 66% Different models could be reaching better predictive outcomes, but this model has the advantage of low computational demand. Further analysis on the data is however recommended to tune the model. Here are the results of the confusion matrix:</p>
+# Scaling and centeing
+scaled &lt;- preProcess(x_training, method=c(&quot;center&quot;,&quot;scale&quot;))
+x_training &lt;- predict(scaled, x_training)
+x_testing &lt;- predict(scaled, x_testing)
+
+#Pre-processing with PCA
+pp &lt;- preProcess(x_training, method=&quot;pca&quot;, pcaComp = 10)
+pca &lt;- predict(pp, x_training)
+pca_test &lt;- predict(pp, x_testing)</code></pre>
+<p>After this, I used the caret package to divide the dataset in a training and a validation set. For the same reason above, a relatively small part of the dataset is used for training.</p>
+<pre class="r"><code>indexes = createDataPartition( training$classe, p = 0.1, list=FALSE)
+
+sub_training &lt;- pca[ indexes, ]
+sub_validation &lt;- pca[ -indexes, ]
+
+
+fitControl &lt;- trainControl(method = &quot;cv&quot;,
+                            number = 5,
+                            allowParallel = TRUE)
+
+model &lt;- train(sub_training, y[indexes], method='rf', na.action = na.omit, 
+                proxy=TRUE, trControl = fitControl)</code></pre>
+<p>The created model uses random forest algorithm to create a prediction. I applied the model to predict the data set apart for validation. Results from the confusion matrix is shown below</p>
+<pre class="r"><code>confusionMatrix( predict(model, pca[ -indexes, ] ), y [ -indexes ]  )</code></pre>
 <pre><code>## Confusion Matrix and Statistics
 ## 
 ##           Reference
 ## Prediction    A    B    C    D    E
-##          A 2231    0    0    0    0
-##          B    1 1518    0    0    0
-##          C    0    0    0    0    0
-##          D    0    0    0    0    0
-##          E    0    0 1368 1286 1442
+##          A 4310  287  252  240  125
+##          B  168 2529  203  184  263
+##          C  210  321 2440  281  179
+##          D  256  118  124 2118  217
+##          E   78  162   60   71 2462
 ## 
 ## Overall Statistics
-##                                          
-##                Accuracy : 0.6616         
-##                  95% CI : (0.651, 0.6721)
-##     No Information Rate : 0.2845         
-##     P-Value [Acc &gt; NIR] : &lt; 2.2e-16      
-##                                          
-##                   Kappa : 0.5693         
-##                                          
-##  Mcnemar's Test P-Value : NA             
+##                                           
+##                Accuracy : 0.7849          
+##                  95% CI : (0.7787, 0.7909)
+##     No Information Rate : 0.2844          
+##     P-Value [Acc &gt; NIR] : &lt; 2.2e-16       
+##                                           
+##                   Kappa : 0.7276          
+##                                           
+##  Mcnemar's Test P-Value : &lt; 2.2e-16       
 ## 
 ## Statistics by Class:
 ## 
 ##                      Class: A Class: B Class: C Class: D Class: E
-## Sensitivity            0.9996   1.0000   0.0000   0.0000   1.0000
-## Specificity            1.0000   0.9998   1.0000   1.0000   0.5856
-## Pos Pred Value         1.0000   0.9993      NaN      NaN   0.3521
-## Neg Pred Value         0.9998   1.0000   0.8256   0.8361   1.0000
-## Prevalence             0.2845   0.1935   0.1744   0.1639   0.1838
-## Detection Rate         0.2843   0.1935   0.0000   0.0000   0.1838
-## Detection Prevalence   0.2843   0.1936   0.0000   0.0000   0.5220
-## Balanced Accuracy      0.9998   0.9999   0.5000   0.5000   0.7928</code></pre>
+## Sensitivity            0.8582   0.7401   0.7925   0.7319   0.7585
+## Specificity            0.9285   0.9426   0.9320   0.9516   0.9743
+## Pos Pred Value         0.8266   0.7556   0.7112   0.7476   0.8690
+## Neg Pred Value         0.9428   0.9379   0.9551   0.9477   0.9471
+## Prevalence             0.2844   0.1935   0.1744   0.1639   0.1838
+## Detection Rate         0.2441   0.1432   0.1382   0.1199   0.1394
+## Detection Prevalence   0.2953   0.1895   0.1943   0.1604   0.1604
+## Balanced Accuracy      0.8933   0.8413   0.8622   0.8417   0.8664</code></pre>
+<p>I am considering the accuracy of the model satisfactory, given the restrictions on the design. Different models could be reaching better predictive outcomes, but this model has the advantage of low computational demand. Further analysis on the data is however recommended to tune the model, and a higher number of component and larger portion of training data are recommended on suitable machine.</p>
 </div>
 <div id="application-to-the-test-cases" class="section level2">
 <h2>Application to the test cases</h2>
-<p>The model is applied to the 20 test cases. According to the model, all the 20 sample cases should fall into class A.</p>
-<pre><code>##  A  B  C  D  E 
-## 20  0  0  0  0</code></pre>
+<p>The model is applied to the 20 test cases. The accuracy on the dataset will be analysed after the results are publishd.</p>
 </div>
 </div>
 
